<resources>
    <string name="app_name">Doki Doggos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_new_pet">Add New Pet</string>
    <string name="title_activity_edit_pet">Edit Pet</string>
    <string name="title_activity_food_checker">Food Checker</string>
    <string name="title_activity_food_answer">Food Checker Answer</string>
    <string name="how_much_food_intro">
        The right amount of food your dog needs will be dependent on several factors: </string>
    <string name="food_amount_title">How Much/Often Should I Feed My Dog?</string>
    <string name="age_diet">
        Once we have determined the right amount to feed our dogs, we can also determine how best to divide that amount into multiple meals throughout the day.
        \nPuppies over 3 or 4 weeks who eat solid food should be fed 3 or more times daily.

        \nAt about 8-10 weeks, puppies should only be fed twice a day until the dog\'s period of rapid growth is over- when exactly this is
        depends on the specific dog breed (it can be any where from 8 months, for smaller dogs, to 2 years, for larger ones).

        \nOnce the dog is a fully grown Adult, the feeding schedule can be changed to a more stable one based on the dog\'s own individual lifestyle.

    </string>
    <string name="size_diet">
        Smaller dog breeds have higher metabolic rates and will need to be fed more often than
        larger breeds, who will need to be fed larger quantities less often. </string>
    <string name="diet_diet">
        The most important factor in determining how much to feed your dog is what type of diet you feed your dog.
        \nPremium dry dog foods will always have a guide on the packaging for how much you should feed your dog daily, based on size, age and/or breed.
        \nIf you are supplementing your dog\'s dry food with home cooked food or wet premium food, keep in mind that they should only be supplements and
        not form the core of your dog\'s diet.
    </string>
    <string name="pregnant_diet">
        If a female dog is pregnant or nursing, she will need to eat more food as she will be expending more energy.
        \nIf this is the case for your dog, please consult with your vet to determine what is best for your dog.
    </string>
    <string name="energy_dogs">
        Dogs who are extremely active (e.g. working or competition dogs) may need to eat more depending on their diet.
        \nIf an active dog is eating a specially formulated diet for high energy dogs, it is generally best to follow the guide on the packaging.
        \nIf the active dog is eating regular premium food, they will likely need to eat an increased amount.
        \nAs all dogs and situations are different, it is always best to consult with your vet before specialising your dog\'s diet.
    </string>
    <string name="health_diet">
        If your dog is unwell, your vet will usually suggest they eat differently until they are healthy again- how differently depends on your dog\'s individual circumstances.
    </string>
    <string name="title_activity_edit_diet_info">Update Diet Details</string>
    <string name="puppy_diet">
        <b>Puppies</b>: puppies under 4 weeks should generally only feed off their mother\'s milk.
        \n\nPuppies 4-8 weeks should start incorporating solid foods into their diet, and this should be carried out slowly, over 4 or 5 days.
        \nIt is critical that puppies get the right nutrients in their diet at this age, so that they can grow properly, and this is best accomplished with a core diet of high quality premium brand of puppy food.
        \nThis is because non-premium foods are very often made from cheap by-products with minimal nutrients, and are sometimes
        even detrimental to a dog\'s health (causing allergies and illness). \nHome cooked diets are not recommended at this age either because they usually lack
        the full amount of nutrients dogs need, and can cause bone and teeth conditions, as well as picky eating.
        \n\nOnce puppies are around 8-12 weeks old, they should be weaned off their mother\'s milk completely and be fed a diet of dry premium puppy food (which can be supplemented with wet premium puppy food).
        This should continue until the dog is around one year old, at which point they can
        transition to an adult diet, and this should again be done slowly over a period of 4-5 days.
        Puppies should also have fresh water on hand 24/7.
    </string>
    <string name="adult_diet">
        <b>Adults</b>: dogs over one year old should be fed a diet consisting mainly of premium grade dry dog food, which can be supplemented with wet premium food or high quality home cooked food.
         This is because dry premium food generally contains the most nutrients and safest ingredients, and also helps to keep teeth healthy and strong.
        \n\nAdditional foods such as dog-friendly fruit and vegetables can be fed as snacks/treats but should not amount to over 10% of a dog\'s daily diet.
        \nAnytime any changes are made to a dog\'s diet (e.g. for allergies, after illness, changing food brand), they should be gradually carried out over 4-5 days.
        \nAnd just like puppies, adult dogs should always have a supply of fresh water on hand.
    </string>
    <string name="activity_levels">
        Dogs who get little exercise and are not very active, such as smaller breeds or older dogs, need diets with decreased sodium,
         and fewer calories overall, in order to avoid weight gain/obesity.
        \n\nDogs who get an average amount of exercise (i.e. through daily walks + play) generally get the right amount of nutrients from regular premium brands of dry food.
        \n\nVery active dogs, such as sporting/competition dogs will need diets with more proteins, fats and/or carbohydrates for the extra energy they expend.
        \n\nMany premium brands of dog food sell specially formulated foods for both inactive and active dogs, but it is always best to consult with your vet before specialising your dog\'s diet!

    </string>
    <string name="health">
        Dogs in good health should be fed regular premium dog foods but those with allergies or who are unwell will need to eat differently.
        \n\nDogs who are allergic to certain ingredients (such as grains) will need specially formulated diets which many premium grade brands today cater to,
        however it is always best to consult with your vet to determine what is best for your dog\'s individual needs.
        \n\nDogs who are unwell (e.g. have a gastrointestinal infection) are generally unable to digest commercial dog foods and should be fed gentle
        foods such as chicken broth, cooked plain white rice, and cooked plain chicken breast.
        Always double check with your vet what to feed your dog when they are unwell.

    </string>
    <string name="pregnancy_diet">
        Pregnant and nursing dogs expend much more energy than they normally do and will therefore need a higher calorie diet with increased levels of calcium, protein and fat.
        \n\nIt is crucial that a pregnant dog gets the right amount of nutrients in her diet as malnutrition will cause serious issues for both her and her puppies.
        \nIf your dog is pregnant it is best to ask your vet for advice on the exact type of diet to feed your pet.
    </string>
    <string name="intro_whattofeed">
        When choosing what type of food to feed our dogs, we need to understand how certain factors change our dogs\' dietary requirements:
    </string>
    <string name="treats_intro">
         Although its fine for dogs to indulge in treats that aren\'t healthy every now and then just like we do,
         it is important to make educated decisions on what we choose to treat our dogs with.


    </string>
    <string name="resources_intro">If you\'re looking for more information on feeding your dog, take a look at some of these helpful resources: </string>
    <string name="rspca">The RSPCA is a trusted and reliable source of pet care information. Here you can find lots of general information on caring for your dog.</string>
    <string name="aspca">The ASPCA, like the RSPCA has some useful information on general care guidelines for dogs.</string>
    <string name="vetwest">Vetwest is a veterinary hospital with several locations in Perth. The website has detailed and accurate information on dog care written by reputable professionals.</string>
    <string name="pet_food_reviews">Pet Food Reviews is an independent review site with information on most Australian commercial dog foods. Reviews detail the types of ingredients found in these foods and whether or not they are beneficial to a dog\'s diet. The comments section may be particularly helpful in finding out how other dog owners have fared with various brands.</string>
    <string name="rspca_link">RSPCA</string>
    <string name="exercise_physicla">
        All dogs need a good amount of daily exercise in order to stay healthy.
        The exact amount will depend on your dog\'s age, size and fitness level, but you should aim for at least one hour every single day.
        This doesn\'t need to be extremely taxing exercise- it can be as simple as walking your dog around the neighbourhood in the evening, or letting them run around the dog park with other dogs.
        The most important thing is that you exercise your dog in a safe environment and let them exercise at a pace which is comfortable for them.
        Never take your dog out to exercise in extreme weather (storms, heat, etc.) and never force them to exercise when they are showing signs of tiredness or fatigue (lying down on a walk, excessive panting, etc.)
        Some more ways of exercising your dog include:
        \n - Playing games with them
        \n - Doing agility training
        \n - Making your dog do tricks for treats
        \n - Taking your dog on a (pet-friendly!) nature trail with you
        \n - Letting your dog chase you (or a treat/toy) up and down the stairs
        \n - Teaching your dog to use a treadmill (always do so safely!)

    </string>
    <string name="exercise_mental">
        Although most dog owners understand the importance of physical exercise, many are unaware that mental stimulation is just as important for a dog to stay healthy.
        Because dogs are domesticated animals who generally have everything done for them by us (feeding, grooming, etc.), they don\'t have a natural purpose to fulfill and
        can therefore become bored, lethargic and even depressed if we do not provide proper outlets for them to use their minds. It can also lead to destructive or aggressive behaviours.
        \nFortunately, it is easy enough to provide mental stimulation for your dog, and doing so is often a fun and rewarding bonding experience for both you and your dog!
        Here are some easy ways to keep your dog mentally healthy:
        \n - Teaching your dog tricks
        \n - Playing games where your dog has to seek out a toy, treat or even you
        \n - Letting your dog experience new environments (taking your dog in the car with you, sitting at a cafe with you, etc.)
        \n - Introducing your dog to new people or pets
        \n - Getting your dog a new toy


    </string>
    <string name="intro_exercise">It is crucial to your dog\'s health that you exercise them both physically and mentally every day. A lack of either can lead to problematic behaviour, physical illnesses or ailments and even mental illness. Exercising your dog can be a great way to stengthen your bond with them, and also to socialise your dog with other dogs.</string>
</resources>