<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FunFragments.Exercise">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Exercising Your Dog"
                android:textAlignment="center"
                android:layout_marginTop="80dp"
                android:textSize="40sp"
                android:padding="20dp"
                android:fontFamily="@font/adam"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_exercise"
                style="@style/basicText"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Physical Exercise"
                android:textSize="30sp"
                android:textAlignment="center"
                android:fontFamily="@font/adam"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_physicla"
                style="@style/basicText"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mental Exercise"
                android:textSize="30sp"
                android:textAlignment="center"
                android:fontFamily="@font/adam"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_mental"
                style="@style/basicText"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>


    </ScrollView>

</FrameLayout>