<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietFragments.WhatToFeedFragment">
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:padding="20dp"
       >

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="What To Feed Your Dog"
       android:textAlignment="center"
       android:layout_marginTop="80dp"
       android:textSize="40sp"
       android:padding="20dp"
       android:fontFamily="@font/adam"
       android:textStyle="bold"
       />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/intro_whattofeed"
       style="@style/basicText" />

      <TableLayout
          android:layout_height="wrap_content"
          android:id="@+id/TableLayout01"
          android:layout_width="match_parent"
          android:layout_margin="20dp">

         <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="•"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/age_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Age"
                android:textSize="28sp"
                android:fontFamily="@font/adam"
                android:textStyle="bold"
                android:paddingBottom="20dp"
                />
         </TableRow>






         <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="•"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="28sp"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Exercise levels"
                android:textSize="28sp"
                android:fontFamily="@font/adam"
                android:textStyle="bold"
                android:paddingBottom="20dp"
                />
         </TableRow>

         <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="•"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="28sp"
                android:fontFamily="@font/adam"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Health"
                android:textSize="28sp"
                android:fontFamily="@font/adam"
                android:textStyle="bold"
                android:paddingBottom="20dp"
                />
         </TableRow>


          <TableRow>
              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="•"
                  android:layout_marginLeft="20dp"
                  android:layout_marginRight="20dp"
                  android:textSize="28sp"
                  android:fontFamily="@font/adam"/>

              <TextView
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="Pregnancy"
                  android:textSize="28sp"
                  android:fontFamily="@font/adam"
                  android:textStyle="bold"
                  android:paddingBottom="40dp"
                  />
          </TableRow>

      </TableLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Age"
          android:textSize="30sp"
          android:textAlignment="center"
          android:fontFamily="@font/adam"
          android:textStyle="bold"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/puppy_diet"
          style="@style/basicText" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/adult_diet"
          style="@style/basicText"
          android:layout_marginBottom="40dp"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Activity Levels"
          android:textSize="30sp"
          android:textAlignment="center"
          android:fontFamily="@font/adam"
          android:textStyle="bold"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/activity_levels"
          style="@style/basicText"
          android:layout_marginBottom="40dp"/>


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Health"
          android:textSize="30sp"
          android:textAlignment="center"
          android:fontFamily="@font/adam"
          android:textStyle="bold"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/health"
          style="@style/basicText"
          android:layout_marginBottom="40dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="Pregnancy/Nursing"
           android:textSize="30sp"
           android:textAlignment="center"
           android:fontFamily="@font/adam"
           android:textStyle="bold"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/pregnancy_diet"
           style="@style/basicText"
           android:layout_marginBottom="40dp"/>




   </LinearLayout>

   </ScrollView>

</FrameLayout>