<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietFragments.HowMuchToFeedFragment"
    android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_amount_title"
            android:textAlignment="center"
            android:layout_marginTop="80dp"
            android:padding="20dp"
            android:textSize="40sp"
            android:fontFamily="@font/adam"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_much_food_intro"
            android:textSize="24sp"
            style="@style/basicText" />

        <TableLayout
            android:layout_height="wrap_content"
            android:id="@+id/TableLayout01"
            android:layout_width="match_parent"
            android:layout_margin="20dp">

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="•"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="28sp"/>

                <TextView
                    android:id="@+id/age_view"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Age"
                    android:textSize="28sp"
                    android:fontFamily="@font/adam"
                    android:textStyle="bold"
                    android:paddingBottom="20dp"
                        />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="•"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="28sp"/>

                <TextView
                    android:id="@+id/diet"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Type of diet"
                    android:textSize="28sp"
                    android:fontFamily="@font/adam"
                    android:textStyle="bold"
                    android:paddingBottom="20dp"
                    />
            </TableRow>


            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="•"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="28sp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Size "
                    android:textSize="28sp"
                    android:fontFamily="@font/adam"
                    android:textStyle="bold"
                    android:paddingBottom="20dp"
                    />
            </TableRow>


            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="•"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="28sp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Pregnancy + Lactation"
                    android:textSize="28sp"
                    android:fontFamily="@font/adam"
                    android:textStyle="bold"
                    android:paddingBottom="20dp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="•"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="28sp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Exercise levels"
                    android:textSize="28sp"
                    android:fontFamily="@font/adam"
                    android:textStyle="bold"
                    android:paddingBottom="20dp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="•"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textSize="28sp"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Health"
                    android:textSize="28sp"
                    android:fontFamily="@font/adam"
                    android:textStyle="bold"
                    android:layout_marginBottom="50dp"
                    />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/section_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/adam"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_diet"
            style="@style/basicText"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/section_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Size"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/adam"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_diet"
            style="@style/basicText"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/section_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type of Diet"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/adam"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diet_diet"
            style="@style/basicText"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/section_pregnancy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pregnancy + Lactation"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/adam"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregnant_diet"
            style="@style/basicText"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/section_energy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Energy levels"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/adam"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/energy_dogs"
            style="@style/basicText"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/section_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Health"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="@font/adam"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_diet"
            style="@style/basicText"
            android:layout_marginBottom="50dp"/>


    </LinearLayout>

</ScrollView>